# icetray-public

./: CMakeLists.txt  LICENSE  README.rst
cmake/: .mailinglist  BuildSlave.cmake  CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake.in  DartConfig.cmake  I3.h.in  PrecompiledHeaders.cmake  RELEASE_NOTES  all_tools.cmake  branch-metaproject.in  build_slave.py.in  classify.py.in  config.cmake  coverage.sh.in  doxyfile.in  env-check.sh.in  env-shell.sh.in  finish.py.in  gSTLFilt.pl  gccversion.c  gccversion.pl  get_failed_tests.cmake.in  gfilt.in  icetray-config.in  icetray-stubgen  info.py.in  init_shim.py.in  install_shlib.pl  install_shlib.py  load_pybindings.py  load_pybindings.py.in  log4cplus.conf.in  make_geant4_env.py  make_tarball.sh.in  make_tarball_rootsys.sh.in  marshal.py.in  modularize.py  passthru.py.in  policies.cmake  (+21 more)
cmake/envtest/: child.sh  parent.sh
cmake/meta-project-docs/: CMakeLists.txt  Makefile  conf.py.in  doxyfile.in  doxygen.mods  metaproject_metainfo.rst.in  plot_directive.py  python_package.rst.in  script_directive.py  sphinx_cmake.py  toctree_sort.py
cmake/meta-project-docs/source/: code_reviews.rst  code_standards.rst  complete_testing_guide.rst  gdb_python.rst  icetray_reference.rst  index.rst  library_standards.rst  netiquette.rst  python_reference.rst  release_checklist_for_project_maintainers.rst  submitting_tickets.rst  writing_release_notes.rst
cmake/resources/docs/: branches_releases_trunk.rst  cmake_advanced.rst  commitmails.rst  dependencies.rst  documentation.rst  doxygen.rst  env-shell.sh.rst  gfilt.rst  homebrew.rst  howtopatch.rst  i3test.rst  icc.rst  index.rst  install.rst  installing_ports.rst  man_port.rst  man_porthier.rst  organization.rst  parasite.rst  platforms.rst  ports.rst  pybindings.rst  reference.rst  svn_intro.rst  tarball.rst  targets.rst  toolset.rst  tutorial.rst  workspace_configured.rst
cmake/resources/scripts/: cmake-docs.py
cmake/resources/test/: import_all.py.in
cmake/tool-patches/common/: I3Test.h  I3TestMain.ixx  container_conversions.h  pybindings.hpp
cmake/tools/: FindI3Boost.cmake  Findcdk.cmake  Findexpat.cmake  Findgsl.cmake  Findjni.cmake  Findlog4cplus.cmake  Findmysql.cmake  Findncurses.cmake  Findphotonics.cmake  Findrdmc.cmake  Findroot.cmake  I3Qt4.cmake  ZThread.cmake  arrow.cmake  bdb.cmake  blas.cmake  boost.cmake  boostnumpy.cmake  cdk.cmake  cfitsio.cmake  clhep.cmake  cuda.cmake  doxygen.cmake  expat.cmake  fftw3.cmake  fox.cmake  geant4.cmake  genie.cmake  gmp.cmake  gsl.cmake  hdf5.cmake  healpix.cmake  hepmc.cmake  hippodraw.cmake  jni.cmake  lapack.cmake  libarchive.cmake  log4cplus.cmake  log4cpp.cmake  minuit2.cmake  (+25 more)
cmake/utility/: car.cmake  cdr.cmake  deprecation_warning.cmake  filter_out.cmake  list_contains.cmake  no_dotfile_glob.cmake  numeric_version.cmake  parse_arguments.cmake  pretty.cmake  sort.cmake  unique.cmake  utility.cmake
cmake/utility/cuda/: README
dataio/: .gitignore  .mailinglist  CMakeLists.txt  RELEASE_NOTES  env-check.sh.in  load_pybindings.py.in  project.cmake  project__init__.py.in  runtests.py.in  tools.cmake
dataio/CompileTest/: CMakeLists.txt
dataio/envtest/: child.sh  parent.sh
dataio/meta-project-docs/: CMakeLists.txt
dataio/meta-project-docs/source/: about_this_documentation.rst  netiquette.rst
dataio/private/.test/: BoostIOFunctions.cxx  BoostModulesBinary.cxx  BoostModulesFailureModes.cxx  BoostModulesXML.cxx  doublebang_via_particle.cxx  mcandreco_tracks.cxx  ttree_collisions.cxx  ttree_oarchive_test.cxx
dataio/private/dataio/: DeleteUnregistered.cxx  I3AsyncReader.cxx  I3AsyncWriter.cxx  I3File.cxx  I3FileStager.cxx  I3FrameSequence.cxx  I3InfiniteSource.cxx  I3MultiWriter.cxx  I3MuxingReaderService.cxx  I3MuxingReaderService.h  I3MuxingReaderServiceFactory.cxx  I3Reader.cxx  I3ReaderService.cxx  I3ReaderServiceFactory.cxx  I3Writer.cxx  I3WriterBase.cxx  QConverter.cxx  counter64.hpp
dataio/private/extract/: main.cxx
dataio/private/filter/: main.cxx.aside
dataio/private/pybindings/: CMakeLists.txt  I3BrowsableFile.cxx  (+8 more)
dataio/python/: I3FileStagerFile.py  __init__.py  fileadaptor.py  pmttype_from_calibration.py  pprint.py
dataio/resources/: dataio-pyshovel.py
dataio/tools/: Findpython.cmake  tooldef.cmake
dataio/utility/: car.cmake  cdr.cmake  filter_out.cmake  parse_arguments.cmake
docs/: .mailinglist  CMakeLists.txt  RELEASE_NOTES  combo_project_list.txt  index.rst  load_commit_messages.py  pyproject.toml  release_contribution_count.py  release_note_generator.py
docs/basedocs/: cpp_reference.rst  genindex.rst  icetray_reference.rst  index.rst  py-modindex.rst  python_reference.rst  search.rst
docs/conf/: conf.py.in  doxyfile.in  metaproject_metainfo.rst.in
docs/extensions/: plot_directive.py  script_directive.py  sphinx_cmake.py
docs/general/: backing_out_commits.rst  code_reviews.rst  code_standards.rst  complete_testing_guide.rst  development_tips.rst  gdb_python.rst  index.rst  library_standards.rst  netiquette.rst  project_owner_duties.rst  release_checklist_for_project_maintainers.rst  software_policy.rst  submitting_tickets.rst  supercomputing_centers.rst  writing_release_notes.rst
docs/info/: cvmfs.rst  overview.rst  quickstart.rst  release_notes.md  release_notes.rst  ssh_keys.rst
docs/resources/: docs-build.py
hdfwriter/: .mailinglist  CMakeLists.txt  RELEASE_NOTES
hdfwriter/python/: __init__.py
icetray/: .gitignore  .mailinglist  CMakeLists.txt  LinkDef.h  RELEASE_NOTES
icetray/python/: I3Test.py  __init__.py  i3inspect.py  i3logging.py  i3tray.py  inspect.py  inspecthelpers2.py  inspecthelpers3.py  memory_util.py  pycompat.py  pypick.py  round_robin_streams.py  test_disabling_of_python_dynamism.py  test_module.py  traydebug.py  traysegment.py  typing.py
icetray/resources/: icetray-inspect.py  inspect2html.xsl  log4cplus.conf  workspace_config.h.in
interfaces/: .mailinglist  CMakeLists.txt  RELEASE_NOTES
steamshovel/: .gitignore  .mailinglist  CMakeLists.txt  LICENSE  README  RELEASE_NOTES  config_with_qt5.cmake
steamshovel/resources/: doms.txt  steamshovel.qrc
(+2419 files in other folders)
